--- a/Controller test/src/nl/hanze/t12/life/view/.gitignore
+++ b/Controller test/src/nl/hanze/t12/life/view/.gitignore
@@ -4,3 +4,9 @@
 /SimulatorView$CarParkView.class
 /SimulatorView.class
 /StatView.class
+/TijdView.class
+/DagView.class
+/PieStats.class
+/PieStatsView.class
+/PieStatView.class
+/GeldView.class
